Caesar Window dark/light

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -12,6 +12,8 @@ copyright = "© 2024 🍀 Daniel Felipe Montenegro"
 
 [params.author]
   name = "Daniel Felipe Montenegro"
+  image = "img/whiteMontenegro1000.png"
+  imageDark = "img/blackMontenegro1000.png"
   headline = "Your friendly neighborhood software engineer."
   bio = "By day, I'm a passionate software developer who loves to dive into code with the purpose of building solutions that impact people's everyday lives. By night? I'm exploring cinema, music, literature, and a little bit of poetry; sometimes all at once, because all those things remind me that I'm alive."
   links = [    
