--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -3,24 +3,18 @@
   pageRef = "about"
   weight = 10
 
-# [[main]]
-#   name = "Blog"
-#   url = "https://www.youtube.com/@MiAmigoMelquiades"
-#   weight = 20
-
-# [[main]]
-#   name = "Projects"
-#   url = "https://github.com/dafmontenegro"
-#   weight = 30
-
 [[main]]
   identifier = "search"
   weight = 99
   [main.params]
     action = "search"
 
-[[main]]
-  identifier = "locale"
-  weight = 100
-  [main.params]
-    action = "locale"
+# [[footer]]
+#   name = "Tags"
+#   pageRef = "tags"
+#   weight = 99
+
+# [[footer]]
+#   name = "Categories"
+#   pageRef = "categories"
+#   weight = 100
