new blog section

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -13,7 +13,8 @@ copyright = "© 2024 🍀 Daniel Felipe Montenegro"
 
 [params.author]
   name = "Daniel Felipe Montenegro"
-  image = "svg/caesars-window.svg"
+  image = "svg/white-caesars-window.svg"
+  imageDark = "svg/black-caesars-window.svg"
   headline = "Your friendly neighborhood software engineer."
   bio = "By day, I'm a passionate software developer who loves to dive into code with the purpose of building solutions that impact people's everyday lives. By night? I'm exploring cinema, music, literature, and a little bit of poetry; sometimes all at once, because all those things remind me that I'm alive."
   links = [    
