--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -4,17 +4,27 @@
   weight = 10
 
 [[main]]
+  name = "Blog"
+  pageRef = "blog"
+  weight = 20
+
+[[main]]
   identifier = "search"
   weight = 99
   [main.params]
     action = "search"
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 99
+[[footer]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 98
 
-# [[footer]]
-#   name = "Categories"
-#   pageRef = "categories"
-#   weight = 100
+[[footer]]
+  name = "Categories"
+  pageRef = "categories"
+  weight = 99
+
+[[footer]]
+  name = "Privacy"
+  pageRef = "privacy"
+  weight = 100
