--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -14,14 +14,21 @@
   [main.params]
     action = "search"
 
+
+
 [[footer]]
   name = "Tags"
   pageRef = "tags"
-  weight = 98
+  weight = 97
 
 [[footer]]
   name = "Categories"
   pageRef = "categories"
+  weight = 98
+
+[[footer]]
+  name = "Thoughts"
+  pageRef = "thoughts"
   weight = 99
 
 [[footer]]
