--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -9,6 +9,11 @@
   weight = 20
 
 [[main]]
+  name = "Projects"
+  pageRef = "projects"
+  weight = 30
+
+[[main]]
   identifier = "search"
   weight = 99
   [main.params]
