--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -22,6 +22,11 @@
 
 
 [[footer]]
+  name = "Music"
+  pageRef = "music"
+  weight = 98
+
+[[footer]]
   name = "Thoughts"
   pageRef = "thoughts"
   weight = 99
