--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,7 +8,7 @@ copyright = "© 2024 🍀 Daniel Felipe Montenegro"
 
 [params]
   dateFormat = "2 January 2006"
-  mainSections = ["blog", "projects"]
+  mainSections = ["blog", "projects", "spaces"]
   description = "By day, I'm a passionate software developer who loves to dive into code with the purpose of building solutions that impact people's everyday lives. By night? I'm exploring cinema, music, literature, and a little bit of poetry; sometimes all at once, because all those things remind me that I'm alive."
 
 [params.author]
