--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dafmontenegro.github.io/"
+baseURL = "https://montenegrodanielfelipe.com/"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
