--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -56,7 +56,7 @@ jobs:
           hugo \
             --minify \
             --baseURL "http://montenegrodanielfelipe.com/" \
-            --verbose  # Enable verbose output for debugging
+            --logLevel info  # Use logLevel instead of verbose
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
