--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -25,7 +25,7 @@ fingerprintAlgorithm = "sha256"
 
 [homepage]
   layout = "profile"
-  showRecent = true
+  showRecent = false
   recentLimit = 3
 
 [article]
